--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,7 @@
 [package]
 name = "graphrox"
+authors = ["Tanner Davies"]
 version = "0.1.0"
 edition = "2021"
-
-
-[dependencies]
-
-
-[profile.release]
-lto = true
+description = "A graph library for fast processing of graph approximations"
+license = "MIT"
