--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ members = [
 authors = ["Tanner Davies"]
 version = "1.0.0"
 edition = "2021"
-description = "A graph library for fast processing of graph approximations"
+description = "A graph library for graph compression and fast processing of graph approximations"
 license = "MIT"
