--- a/graphrox-c/Cargo.toml
+++ b/graphrox-c/Cargo.toml
@@ -5,6 +5,7 @@ version.workspace = true
 edition.workspace = true
 description.workspace = true
 license.workspace = true
+build = "build.rs"
 
 [lib]
 doc = false
