--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: TestAll
 
 on:
   push:
@@ -18,3 +18,4 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run tests
       run: cargo test --verbose
+      run: cd graphrox-py && python3 tests.py
