Fix Github workflow

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,5 +17,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Run tests
-      run: cargo test --verbose
-      run: cd graphrox-py && python3 tests.py
+      run: cargo test --verbose && cd graphrox-py && python3 tests.py
