--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-name: TestAll
+name: rust
 
 on:
   push:
@@ -18,10 +18,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run tests
       run: >
-        cargo test --verbose &&  \
-        cargo build && \
-        cp target/debug/libgraphrox.so \
-          graphrox-py/graphrox/graphrox-x86_64-unknown-linux-gnu.so && \
-        cd graphrox-py && \
+        cargo test --verbose
+        cargo build
+        cp target/debug/libgraphrox.so graphrox-py/graphrox/graphrox-x86_64-unknown-linux-gnu.so
+        cd graphrox-py
         python3 tests.py
          
